# vxectl

./: .gitignore  Cargo.toml  Justfile  README.md  meson.build
madr-lib/: Cargo.toml
madr-lib/documentation/: dpi-and-rgb-encoding.md
madr-lib/src/: battery.rs  debounce.rs  device.rs  dpi.rs  lib.rs  performance.rs  sensor.rs  sleep.rs
madrctl/: Cargo.toml  Justfile
madrctl/src/: main.rs
madrlib/documentation/: dpi-and-rgb-encoding.md
madrlib/src/: debounce.rs  sensor.rs
src/: debounce.rs  device.hpp  device.rs  dpi_stage.cpp  info.rs  main.rs  performance.rs  polling_rate.cpp  polling_rate.hpp  sensor.rs  set.cpp  set.hpp  sleep.rs  vxectl.cpp
